objects/ResourceAbsence.object
<CustomObject>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resource_ERP__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>901-Internal Administration</fullName>
                </value>
                <value>
                    <fullName>902-Holiday</fullName>
                </value>
                <value>
                    <fullName>903-Sickness</fullName>
                </value>
                <value>
                    <fullName>904-Awaiting Parts</fullName>
                </value>
                <value>
                    <fullName>905-Awaiting Instructions</fullName>
                </value>
                <value>
                    <fullName>906-Training</fullName>
                </value>
                <value>
                    <fullName>907-Maintenance</fullName>
                </value>
                <value>
                    <fullName>908-Authorised Absense</fullName>
                </value>
                <value>
                    <fullName>909-Customer Visits</fullName>
                </value>
                <value>
                    <fullName>910-Unauthorised Absense</fullName>
                </value>
                <value>
                    <fullName>911-Forklift Driving</fullName>
                </value>
                <value>
                    <fullName>912-Non Chargeable Travel</fullName>
                </value>
                <value>
                    <fullName>913-Flex Contract Adjustment</fullName>
                </value>
                <value>
                    <fullName>914-Apprentice Training</fullName>
                </value>
                <value>
                    <fullName>915-Internal Trainers</fullName>
                </value>
                <value>
                    <fullName>916-Training - Technical</fullName>
                </value>
                <value>
                    <fullName>917-Training - Personal Development</fullName>
                </value>
                <value>
                    <fullName>918-Training - Health, Safety &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>919-Training - Corporate &amp; Mandatory</fullName>
                </value>
                <value>
                    <fullName>920-HS&amp;E - Lock Out Tag Out, Job Safety</fullName>
                </value>
                <value>
                    <fullName>101-TOOL STORE</fullName>
                </value>
                <value>
                    <fullName>102-TRAINING</fullName>
                </value>
                <value>
                    <fullName>103-TRAINING APPRENTICE</fullName>
                </value>
                <value>
                    <fullName>104-STANDBY TIME</fullName>
                </value>
                <value>
                    <fullName>105-10HR BREAK</fullName>
                </value>
                <value>
                    <fullName>106-PUBLIC RELATIONS</fullName>
                </value>
                <value>
                    <fullName>107-SUPERVISION</fullName>
                </value>
                <value>
                    <fullName>108-CLEANING</fullName>
                </value>
                <value>
                    <fullName>109-CLERICAL</fullName>
                </value>
                <value>
                    <fullName>110-INJURY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(Start), 0, (End - Start)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTimeFrom__c</fullName>
        <label>Estimated Travel Time From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTime__c</fullName>
        <label>Estimated Travel Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName>
        <label>Estimated Travel Time From Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName>
        <label>Estimated Travel Time To Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Resource Absences</relationshipLabel>
        <relationshipName>Resource_Absences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_ERP__c</fullName>
        <defaultValue>CASE($User.ERP__c, &quot;BMS&quot;, &quot;BMS&quot;, &quot;MOVEX&quot;, &quot;MOVEX&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-190&quot;, &quot;MOVEX-190&quot;, &quot;MOVEX-200&quot;, &quot;MOVEX-200&quot;, &quot;MOVEX-250&quot;, &quot;MOVEX-250&quot;, &quot;MOVEX-270&quot;, &quot;MOVEX-270&quot;, &quot;MOVEX-175&quot;, &quot;MOVEX-175&quot;, &quot;&quot;)</defaultValue>
        <label>Resource ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>All_Day</fullName>
        <active>true</active>
        <label>All Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom</fullName>
        <active>true</active>
        <label>Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Break</fullName>
        <active>false</active>
        <label>Break</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Non_Availability</fullName>
        <active>true</active>
        <label>Non Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__Absence_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__Gantt_Color__c)) &amp;&amp; (NOT(REGEX(FSL__Gantt_Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__Gantt_Color__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startShouldPrecedeEnd</fullName>
        <active>true</active>
        <errorConditionFormula>End &lt;=  Start</errorConditionFormula>
        <errorDisplayField>Start</errorDisplayField>
        <errorMessage>The Start Time must be earlier than the End Time.</errorMessage>
    </validationRules>
</CustomObject>